Basic split screen layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>Jasper Yeh</h1>
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Jasper Yeh</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div class="split left">
+            <div class="centered">
+              <img src="headshot.jpg" alt="headshot">
+              <h1>Jasper Yeh</h1>
+              <p>Programmer. Game Designer. Photographer.</p>
+              <p>Github Icon, LinkedIn Icon</p>
+            </div>
+          </div>
+          
+          <div class="split right">
+            <div class="centered">
+                <h2 id="about-me">About Me</h2>
+                <p id="about-me">Work in progress.</p>
+                <h2 id="about-me">Projects</h2>
+                <p id="about-me">Lumin, Speed Hacker</p>
+            </div>
+          </div>
+</body>
+</html>
