Added clickable icons and itch.io widgets for game projects.

--- a/index.html
+++ b/index.html
@@ -4,26 +4,44 @@
 <head>
   <meta charset="utf-8">
   <title>Jasper Yeh</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
+
 </head>
 
 <body>
     <div class="split left">
             <div class="centered">
-              <img src="headshot.jpg" alt="headshot">
-              <h1>Jasper Yeh</h1>
-              <p>Programmer. Game Designer. Photographer.</p>
-              <p>Github Icon, LinkedIn Icon</p>
+                <img src="images/headshot.jpg" id="headshot" alt="headshot">
+
+                <h1>Jasper Yeh</h1>
+                <p>Programmer. Game Designer. Photographer.</p>
+                
+                <div class="profiles">
+                    <a href="https://github.com/jasperyeh" target="_blank">
+                        <img src="images/GitHub-Mark-Light-64px.png" alt="GitHub Logo" style="width:32px;height:32px;border:0;">
+                    </a>
+                    <a href="https://www.linkedin.com/in/jasper-yeh/" target="_blank">
+                        <img src="images/linkedin-64.png" alt="LinkedIn Logo" style="width:32px;height:32px;">
+                    </a>
+                </div>
             </div>
           </div>
           
-          <div class="split right">
-            <div class="centered">
-                <h2 id="about-me">About Me</h2>
-                <p id="about-me">Work in progress.</p>
-                <h2 id="about-me">Projects</h2>
-                <p id="about-me">Lumin, Speed Hacker</p>
-            </div>
-          </div>
+
+
+
+
+
+    <div class="split right">
+        <div class="centered">
+            <h2 id="about-me">About Me</h2>
+            <p id="about-me">Work in progress.</p>
+            <h2 id="about-me">Projects</h2>
+
+            <iframe frameborder="0" src="https://itch.io/embed/267892?border_width=0&amp;bg_color=fdf5e6&amp;fg_color=3d5a80&amp;link_color=0f1f35&amp;border_color=fdf5e6" width="550" height="165"></iframe>
+            <iframe frameborder="0" src="https://itch.io/embed/381368?border_width=0&amp;bg_color=fdf5e6&amp;fg_color=3d5a80&amp;link_color=0f1f35&amp;border_color=fdf5e6" width="550" height="165"></iframe>
+        </div>
+    </div>
 </body>
 </html>
