Testing right side scrolling

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Jasper Yeh</title>
+  <!-- <link rel="icon" type="image/png" href="images/"> -->
   <link rel="stylesheet" href="styles/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
-
 </head>
 
 <body>
+    <!-- Left Side - headshot, name, quick description, profile links -->
     <div class="split left">
-            <div class="centered">
+            <div class="left-centered">
                 <img src="images/headshot.jpg" id="headshot" alt="headshot">
 
                 <h1>Jasper Yeh</h1>
@@ -27,21 +29,19 @@
                 </div>
             </div>
           </div>
-          
 
-
-
-
-
+    <!-- Right Side - about me, projects -->
     <div class="split right">
-        <div class="centered">
-            <h2 id="about-me">About Me</h2>
-            <p id="about-me">Work in progress.</p>
-            <h2 id="about-me">Projects</h2>
-
-            <iframe frameborder="0" src="https://itch.io/embed/267892?border_width=0&amp;bg_color=fdf5e6&amp;fg_color=3d5a80&amp;link_color=0f1f35&amp;border_color=fdf5e6" width="550" height="165"></iframe>
-            <iframe frameborder="0" src="https://itch.io/embed/381368?border_width=0&amp;bg_color=fdf5e6&amp;fg_color=3d5a80&amp;link_color=0f1f35&amp;border_color=fdf5e6" width="550" height="165"></iframe>
-        </div>
+        <div class="right-centered">
+            <div class="right-centered">
+                <h2 id="about-me">About Me</h2>
+                <hr>
+                <p id="about-me">Work in progress.</p>
+                <h2 id="about-me">Projects</h2>
+                <hr>
+                <iframe frameborder="0" src="https://itch.io/embed/267892?border_width=0&amp;bg_color=fdf5e6&amp;fg_color=3d5a80&amp;link_color=0f1f35&amp;border_color=fdf5e6" width="550" height="165"></iframe>
+                <iframe frameborder="0" src="https://itch.io/embed/381368?border_width=0&amp;bg_color=fdf5e6&amp;fg_color=3d5a80&amp;link_color=0f1f35&amp;border_color=fdf5e6" width="550" height="165"></iframe>
+            </div>
     </div>
 </body>
 </html>
