Fixed right side scrolling. Need to adjust padding/margins

--- a/index.html
+++ b/index.html
@@ -33,14 +33,41 @@
     <!-- Right Side - about me, projects -->
     <div class="split right">
         <div class="right-centered">
-            <div class="right-centered">
-                <h2 id="about-me">About Me</h2>
+            <div class="about-me">
+
+                <h2>About Me</h2>
                 <hr>
-                <p id="about-me">Work in progress.</p>
-                <h2 id="about-me">Projects</h2>
+                <p>
+                        Work in progress. Work in progress. Work in progress.
+                        Work in progress. Work in progress. Work in progress. 
+                        Work in progress. Work in progress. Work in progress.
+                        Work in progress. Work in progress. Work in progress. 
+                        Work in progress. Work in progress. Work in progress.
+                        Work in progress. Work in progress. Work in progress. 
+                        Work in progress. Work in progress. Work in progress.
+                </p>
+
+                <h2>Projects</h2>
                 <hr>
                 <iframe frameborder="0" src="https://itch.io/embed/267892?border_width=0&amp;bg_color=fdf5e6&amp;fg_color=3d5a80&amp;link_color=0f1f35&amp;border_color=fdf5e6" width="550" height="165"></iframe>
                 <iframe frameborder="0" src="https://itch.io/embed/381368?border_width=0&amp;bg_color=fdf5e6&amp;fg_color=3d5a80&amp;link_color=0f1f35&amp;border_color=fdf5e6" width="550" height="165"></iframe>
+                <p>
+                        Work in progress. Work in progress. Work in progress.
+                        Work in progress. Work in progress. Work in progress. 
+                        Work in progress. Work in progress. Work in progress.
+                        Work in progress. Work in progress. Work in progress. 
+                        Work in progress. Work in progress. Work in progress.
+                        Work in progress. Work in progress. Work in progress. 
+                        Work in progress. Work in progress. Work in progress.
+                        Work in progress. Work in progress. Work in progress. 
+                        Work in progress. Work in progress. Work in progress.
+                        Work in progress. Work in progress. Work in progress. 
+                        Work in progress. Work in progress. Work in progress. 
+                        Work in progress. Work in progress. Work in progress.
+                        Work in progress. Work in progress. Work in progress. 
+                        Work in progress. Work in progress. Work in progress.
+                        Work in progress. Work in progress. Work in progress. 
+                </p>
             </div>
     </div>
 </body>
