Adjusted right side margins

--- a/index.html
+++ b/index.html
@@ -38,36 +38,13 @@
                 <h2>About Me</h2>
                 <hr>
                 <p>
-                        Work in progress. Work in progress. Work in progress.
-                        Work in progress. Work in progress. Work in progress. 
-                        Work in progress. Work in progress. Work in progress.
-                        Work in progress. Work in progress. Work in progress. 
-                        Work in progress. Work in progress. Work in progress.
-                        Work in progress. Work in progress. Work in progress. 
-                        Work in progress. Work in progress. Work in progress.
+                        Work in progress.
                 </p>
 
                 <h2>Projects</h2>
                 <hr>
                 <iframe frameborder="0" src="https://itch.io/embed/267892?border_width=0&amp;bg_color=fdf5e6&amp;fg_color=3d5a80&amp;link_color=0f1f35&amp;border_color=fdf5e6" width="550" height="165"></iframe>
                 <iframe frameborder="0" src="https://itch.io/embed/381368?border_width=0&amp;bg_color=fdf5e6&amp;fg_color=3d5a80&amp;link_color=0f1f35&amp;border_color=fdf5e6" width="550" height="165"></iframe>
-                <p>
-                        Work in progress. Work in progress. Work in progress.
-                        Work in progress. Work in progress. Work in progress. 
-                        Work in progress. Work in progress. Work in progress.
-                        Work in progress. Work in progress. Work in progress. 
-                        Work in progress. Work in progress. Work in progress.
-                        Work in progress. Work in progress. Work in progress. 
-                        Work in progress. Work in progress. Work in progress.
-                        Work in progress. Work in progress. Work in progress. 
-                        Work in progress. Work in progress. Work in progress.
-                        Work in progress. Work in progress. Work in progress. 
-                        Work in progress. Work in progress. Work in progress. 
-                        Work in progress. Work in progress. Work in progress.
-                        Work in progress. Work in progress. Work in progress. 
-                        Work in progress. Work in progress. Work in progress.
-                        Work in progress. Work in progress. Work in progress. 
-                </p>
             </div>
     </div>
 </body>
