Added link to Slackabble

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
                 <h2>Projects</h2>
                 <hr>
+                <a href="https://www.jasperyeh.dev/slackabble/">Slackabble</a>
+                <br>
                 <iframe frameborder="0" src="https://itch.io/embed/267892?border_width=0&amp;bg_color=fdf5e6&amp;fg_color=3d5a80&amp;link_color=0f1f35&amp;border_color=fdf5e6" width="550" height="165"></iframe>
                 <iframe frameborder="0" src="https://itch.io/embed/381368?border_width=0&amp;bg_color=fdf5e6&amp;fg_color=3d5a80&amp;link_color=0f1f35&amp;border_color=fdf5e6" width="550" height="165"></iframe>
             </div>
