--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="images/headshot.jpg" id="headshot" alt="headshot">
 
                 <h1>Jasper Yeh</h1>
-                <p>Programmer. Game Designer. Photographer.</p>
+                <p>Redoing my site later :)</p>
                 
                 <div class="profiles">
                     <a href="https://github.com/jasperyeh" target="_blank">
